@@ -1,6 +1,6 @@
 {
     "name": "pyrawores",
-    "version": "3.0.20",
+    "version": "3.0.21",
     "factorio_version": "2.0",
     "title": "Pyanodons Raw Ores",
     "author": "Pyanodon, Nexela, Kingarthur, notnotmelon, Mootykins, ShadowGlass, Archezekiel, Quintuple, przemo1232",
